syntax = "proto3";

package client;

option go_package = "github.com/arybolovlev/orkestrator/proto/client";

message Image {
    string name = 1;
    string tag = 2;
}

message Task {
    string name = 1;
    Image image = 2;
}

message RegisterJobRequest {
    string name = 1;
    repeated Task task = 2;
}

message RegisterJobResponse {
    string id = 1;
    string name = 2;
}

message GetJobRequest {}
message GetJobResponse {}

message GetJobListRequest {}
message GetJobListResponse {}

message GetStatusRequest {}
message GetStatusResponse {}

service Client {
    rpc RegisterJob(RegisterJobRequest) returns (RegisterJobResponse);
    rpc GetJob(GetJobRequest) returns (GetJobResponse);
    rpc GetJobList(GetJobListRequest) returns (GetJobListResponse);
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}
